--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,86 +1,25 @@
-<div class="home-container">
-  <img
-    id="profile"
-    src="../../assets/images/pro-pic.jpg"
-    height="300"
-    width="300"
-  />
-  <h1 id="introduction">
-    Hi👋, I'm <span class="name">Siddharth Patel</span>.
-  </h1>
-  <h1 id="description">
-    I am a graduate with Bachelors in Computer Science from George Mason
-    University with close to 2 years of experience in Full Stack development.
-  </h1>
-
-  <div class="skills-container">
-    <h1><b>Skills</b></h1>
-    <div>
-      <h2>Front-End</h2>
-      <figure>
-        <img src="../../assets/images/html5.svg" />
-        <figcaption>HTML</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/css.svg" />
-        <figcaption>CSS</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/angular.svg" />
-        <figcaption>Angular</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/javascript.svg" />
-        <figcaption>JavaScript</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/bootstrap.svg" />
-        <figcaption>Bootstrap</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/react.svg" />
-        <figcaption>React</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/typescript.svg" />
-        <figcaption>TypeScript</figcaption>
-      </figure>
-    </div>
-    <!-- Web Development End -->
-    <div>
-      <h2>Back-end</h2>
-      <figure>
-        <img src="../../assets/images/python.svg" />
-        <figcaption>Python</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/java.svg" />
-        <figcaption>Java</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/mongodb.svg" />
-        <figcaption>MongoDB</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/firebase.svg" />
-        <figcaption>Firebase</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/nodejs.svg" />
-        <figcaption>NodeJS</figcaption>
-      </figure>
-    </div>
-    <!-- Back-end Ends -->
-    <div>
-      <h2>Others</h2>
-      <figure>
-        <img src="../../assets/images/heroku.svg" />
-        <figcaption>Heroku</figcaption>
-      </figure>
-      <figure>
-        <img src="../../assets/images/Octocat.png" />
-        <figcaption>GitHub</figcaption>
-      </figure>
-    </div>
+<section class="home-container">
+  <header>
+    <h1>Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
+    <h1>Full Stack Developer</h1>
+  </header>
+  <div class="home-profile">
+    <img
+      id="profile"
+      src="../../assets/images/pro-pic.jpg"
+      height="300"
+      width="300"
+    />
+    <img class="skills" src="../../assets/images/html5.svg" />
+    <img class="skills" src="../../assets/images/css.svg" />
+    <img class="skills" src="../../assets/images/angular.svg" />
+    <img class="skills" src="../../assets/images/javascript.svg" />
+    <img class="skills" src="../../assets/images/typescript.svg" />
+    <img class="skills" src="../../assets/images/python.svg" />
+    <img class="skills" src="../../assets/images/java.svg" />
+    <img class="skills" src="../../assets/images/nodejs.svg" />
   </div>
-</div>
+  <div class="mousey">
+    <div class="scroller"></div>
+  </div>
+</section>
