--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,47 +1,159 @@
 .home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem 0 2rem 0;
+  height: 92vh;
 }
-.skills-container img {
-  width: 50px;
-  height: 50px;
+.home-profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 9rem 0 9rem 0;
+}
+
+.skills {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+}
+
+.skills:nth-child(2) {
+  /* transform: translate(-350%); */
+  animation: reverse-1 10s linear infinite;
+}
+@keyframes reverse-1 {
+  from {
+    transform: rotate(0deg) translate(-350%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-350%) rotate(-360deg);
+  }
+}
+.skills:nth-child(3) {
+  /* transform: translate(-250%, 250%); */
+  animation: reverse-2 10s linear infinite;
+}
+@keyframes reverse-2 {
+  from {
+    transform: rotate(0deg) translate(-250%, 250%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-250%, 250%) rotate(-360deg);
+  }
+}
+.skills:nth-child(4) {
+  /* transform: translate(350%); */
+  animation: reverse-3 10s linear infinite;
+}
+@keyframes reverse-3 {
+  from {
+    transform: rotate(0deg) translate(350%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(350%) rotate(-360deg);
+  }
+}
+.skills:nth-child(5) {
+  /* transform: translate(0, -350%); */
+  animation: reverse-4 10s linear infinite;
+}
+@keyframes reverse-4 {
+  from {
+    transform: rotate(0deg) translate(0, -350%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(0, -350%) rotate(-360deg);
+  }
+}
+.skills:nth-child(6) {
+  /* transform: translate(-250%, -250%); */
+  animation: reverse-5 10s linear infinite;
+}
+@keyframes reverse-5 {
+  from {
+    transform: rotate(0deg) translate(-250%, -250%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-250%, -250%) rotate(-360deg);
+  }
+}
+.skills:nth-child(7) {
+  /* transform: translate(0, 350%); */
+  animation: reverse-6 10s linear infinite;
+}
+@keyframes reverse-6 {
+  from {
+    transform: rotate(0deg) translate(0, 350%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(0, 350%) rotate(-360deg);
+  }
+}
+.skills:nth-child(8) {
+  /* transform: translate(250%, -250%); */
+  animation: reverse-7 10s linear infinite;
+}
+@keyframes reverse-7 {
+  from {
+    transform: rotate(0deg) translate(250%, -250%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(250%, -250%) rotate(-360deg);
+  }
+}
+.skills:nth-child(9) {
+  /* transform: translate(250%, 250%); */
+  animation: reverse-8 10s linear infinite;
+}
+@keyframes reverse-8 {
+  from {
+    transform: rotate(0deg) translate(250%, 250%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(250%, 250%) rotate(-360deg);
+  }
 }
 
 .name {
   color: #f33c3c;
 }
-.skills-container {
-  margin-top: 4rem;
-}
-.skills-container,
 h1 {
   font-weight: 400;
   font-size: 20px;
   text-align: center;
   color: var(--text-color);
 }
-.skills-container > h1 {
-  font-size: 2.7rem;
-  font-weight: 100;
-  text-transform: uppercase;
-  color: var(--text-color);
-}
 
-.skills-container figure {
-  font-weight: 300;
-  font-size: 16px;
-  display: inline-block;
-}
 #profile {
   border-radius: 50%;
 }
-
-#interest {
-  margin: 2rem 0 2rem 0;
+.mousey {
+  width: 3px;
+  margin: auto;
+  padding: 15px 20px;
+  height: 35px;
+  border: 2px solid var(--text-color);
+  border-radius: 25px;
 }
-
-h2 {
-  margin: 2rem 0 0 0;
+.scroller {
+  width: 3px;
+  height: 10px;
+  border-radius: 25%;
+  background-color: var(--text-color);
+  animation-name: scroll;
+  animation-duration: 2.2s;
+  animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+  animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(15px);
+    opacity: 0;
+  }
 }
