Adding about me section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar id="portfolio"></app-navbar>
 <app-home></app-home>
+<app-about-me></app-about-me>
 <app-projects></app-projects>
 <app-experience></app-experience>
 <app-footer></app-footer>
