--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <section id="projects">
-  <header class="project-heading">
+  <header>
     <span>Let's See My Work</span>
-    <h3>Top Projects</h3>
+    <p>Top Projects</p>
   </header>
 
   <ul class="project-filter">
