Changing the order of Application projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,19 +13,7 @@
     <li class="list" data-filter="ai">AI</li>
   </ul>
 
-  <div class="project-container">
-    <div class="project-box app">
-      <img src="../../assets/images/Bit-Fil-A.png" />
-      <h1>Bit-Fil-A</h1>
-      <p>
-        Bit-Fil-A is an angular-based CRUD application consisting of a menu &
-        shopping cart.
-      </p>
-      <button (click)="bitFilAClick()">
-        <p>GitHub</p>
-        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
-      </button>
-    </div>
+  <summary>
     <div class="project-box app">
       <img src="../../assets/images/Post-It.png" />
       <h1>Post-It</h1>
@@ -34,6 +22,18 @@
         public notes with images.
       </p>
       <button (click)="openPostIt()">
+        <p>GitHub</p>
+        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
+      </button>
+    </div>
+    <div class="project-box app">
+      <img src="../../assets/images/Bit-Fil-A.png" />
+      <h1>Bit-Fil-A</h1>
+      <p>
+        Bit-Fil-A is an angular-based CRUD application consisting of a menu &
+        shopping cart.
+      </p>
+      <button (click)="bitFilAClick()">
         <p>GitHub</p>
         <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
       </button>
@@ -75,5 +75,5 @@
         <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
       </button>
     </div>
-  </div>
+  </summary>
 </section>
